--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,13 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #e9f0ff;
+}
+
 /*:root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
